config vs code - extensions